--- a/content/resources/02030acq_rep03.md
+++ b/content/resources/02030acq_rep03.md
@@ -5,6 +5,7 @@ description: This reading material is a report by the Defense Science Board/Air 
   Programs.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/16-892j-space-system-architecture-and-design-fall-2004/7b948b422732245be644981fdf2ed4d7_02030acq_rep03.pdf
 file_type: application/pdf
+parent_uid: cdd17381-3670-14fb-4ae8-517a5732b217
 resourcetype: Document
 title: 02030acq_rep03.pdf
 uid: 7b948b42-2732-245b-e644-981fdf2ed4d7
