--- a/content/resources/03000outline3v3-1.md
+++ b/content/resources/03000outline3v3-1.md
@@ -4,6 +4,7 @@ description: This file contains the required readings, problems etc. for introdu
   to MATE-CON.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/16-892j-space-system-architecture-and-design-fall-2004/5413e7ff169d486aadeb0d2d41e17843_03000outline3v3.pdf
 file_type: application/pdf
+parent_uid: e0eed86f-5693-f887-d901-3ae41a2bb482
 resourcetype: Document
 title: 03000outline3v3.pdf
 uid: 5413e7ff-169d-486a-adeb-0d2d41e17843
