--- a/content/resources/04010lec4frame13.md
+++ b/content/resources/04010lec4frame13.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This lecture material is on "SSPARC book" material for lecture 4.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/16-892j-space-system-architecture-and-design-fall-2004/5d55ba3f4c86851ee274c8914b58d6c4_04010lec4frame13.pdf
 file_type: application/pdf
+parent_uid: e0eed86f-5693-f887-d901-3ae41a2bb482
 resourcetype: Document
 title: 04010lec4frame13.pdf
 uid: 5d55ba3f-4c86-851e-e274-c8914b58d6c4
