--- a/content/resources/12010lec12frame2.md
+++ b/content/resources/12010lec12frame2.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This is a draft on "SSPARC BOOK" material for lecture 12.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/16-892j-space-system-architecture-and-design-fall-2004/118090155eb2b29b41705968a607d7fc_12010lec12frame2.pdf
 file_type: application/pdf
+parent_uid: e0eed86f-5693-f887-d901-3ae41a2bb482
 resourcetype: Document
 title: 12010lec12frame2.pdf
 uid: 11809015-5eb2-b29b-4170-5968a607d7fc
